--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,9 +8,7 @@
 
     <ImageView
         android:id="@+id/iv_splash"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:src="@drawable/ic_logo_title_black"
+        style="@style/Splash"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
