--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,4 +26,10 @@
         <item name="cornerSizeBottomLeft">25dp</item>
         <item name="cornerSizeBottomRight">25dp</item>
     </style>
+
+    <style name="Splash">
+        <item name="android:layout_width">250dp</item>
+        <item name="android:layout_height">250dp</item>
+        <item name="android:src">@drawable/ic_logo_title_black</item>
+    </style>
 </resources>
